Added Dry Top Challenger Cliffs

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 					</div>
 					<br />
 					<h2>Map</h2>
-					<label style="display:inline-block" title="Show/Hide map icons for world completion. Will increase initial site load time if enabled."><input id="opt_bol_showMappingIcons" type="checkbox" /> Display map completion icons</label>
+					<label style="display:inline-block" title="Show/Hide all the map icons as you would see from the in-game world map. Will increase initial site load time if enabled."><input id="opt_bol_showMappingIcons" type="checkbox" /> Display map completion icons</label>
 					<samp class="jsHelpCollapsible"></samp>
 					<div class="cssIndent">
 						<label><input id="opt_bol_displaySectors" type="checkbox" /> Sector Names</label>
