--- a/mapsrc.html
+++ b/mapsrc.html
@@ -86,7 +86,9 @@ var GW2T_RESOURCE_DATA = {
 	Orichalcum: {
 		approx: true,
 		nodes: [
-		[5023, 16529], // dry
+		[3916, 16397], // dry
+		[4008, 16245],
+		[5023, 16529],
 		[5170, 16294],
 		[11939, 20363], // southsun
 		[12409, 19473],
@@ -303,84 +305,6 @@ var GW2T_COLLECTIBLE_DATA = {
 	},
 	Collectible1: 
 	{
-		name: "Coin Collector: Prospect Valley",
-		color: "yellow",
-		wiki: "http://wiki.guildwars2.com/wiki/Lost_coin",
-		credit: "http://dulfy.net/2014/07/01/gw2-coin-collector-prospect-valley-achievement-guide/",
-		needles: [
-		{n: 1, c: [5525, 16723]},
-		{n: 2, c: [5413, 16656]},
-		{n: 3, c: [5415, 16783]},
-		{n: 4, c: [5286, 16560]},
-		{n: 5, c: [5218, 16667]},
-		{n: 6, c: [5249, 16549]},
-		{n: 7, c: [5240, 16427]},
-		{n: 8, c: [5109, 16734]},
-		{n: 9, c: [5139, 16775]},
-		{n: 10, c: [5153, 16703]},
-		{n: 11, c: [4970, 16655]},
-		{n: 12, c: [4925, 16726]},
-		{n: 13, c: [4916, 16697]},
-		{n: 14, c: [4888, 16545]},
-		{n: 15, c: [5096, 16487]},
-		{n: 16, c: [5177, 16275]},
-		{n: 17, c: [5282, 16174]},
-		{n: 18, c: [5412, 16187]},
-		{n: 19, c: [5346, 16214]},
-		{n: 20, c: [5555, 16077]},
-		{n: 21, c: [5520, 16281]},
-		{n: 22, c: [5668, 16191]},
-		{n: 23, c: [5528, 16455]},
-		{n: 24, c: [5393, 16558]},
-		{n: 25, c: [5473, 16462]},
-		{n: 26, c: [5548, 16538]},
-		{n: 27, c: [5557, 16434]},
-		{n: 28, c: [5560, 16511]},
-		{n: 29, c: [5382, 16406]},
-		{n: 30, c: [5367, 16565]}
-		]
-	},
-	Collectible2: 
-	{
-		name: "Coin Collector: Uplands",
-		color: "orange",
-		wiki: "http://wiki.guildwars2.com/wiki/Lost_coin",
-		credit: "http://www.guildnews.de/guides/die-verschlingung-der-grosse-guide/730/3/die-muenzen-aus-dem-hochland/",
-		needles: [
-		{n: 1, c: [5223, 16175]},
-		{n: 2, c: [5034, 16359]},
-		{n: 3, c: [4917, 16389]},
-		{n: 4, c: [4789, 16355]},
-		{n: 5, c: [4759, 16182]},
-		{n: 6, c: [5119, 16201]},
-		{n: 7, c: [5164, 16073]},
-		{n: 8, c: [4874, 16002]},
-		{n: 9, c: [4924, 15825]},
-		{n: 10, c: [4940, 15784]},
-		{n: 11, c: [4789, 15800]},
-		{n: 12, c: [4722, 15780]},
-		{n: 13, c: [4622, 15948]},
-		{n: 14, c: [4562, 15798]},
-		{n: 15, c: [4384, 15773]},
-		{n: 16, c: [4026, 15878]},
-		{n: 17, c: [3950, 15886]},
-		{n: 18, c: [3943, 16136]},
-		{n: 19, c: [4105, 16246]},
-		{n: 20, c: [4217, 16113]},
-		{n: 21, c: [4169, 16253]},
-		{n: 22, c: [4407, 16166]},
-		{n: 23, c: [4660, 16140]},
-		{n: 24, c: [4432, 16350]},
-		{n: 25, c: [4497, 16423]},
-		{n: 26, c: [4546, 16383]},
-		{n: 27, c: [4664, 16375]},
-		{n: 28, c: [4508, 16747]},
-		{n: 29, c: [4566, 16733]},
-		{n: 30, c: [4464, 16790]}
-		]
-	},
-	Collectible3: 
-	{
 		name: "Buried Locked Chest",
 		color: "cornsilk",
 		wiki: "http://wiki.guildwars2.com/wiki/Buried_Locked_Chest",
@@ -484,7 +408,110 @@ var GW2T_COLLECTIBLE_DATA = {
 		{n: 95, c: [4658, 16371], t: "Near the crash site #2."},
 		{n: 96, c: [4374, 15764], t: "Up near skill point."},
 		{n: 97, c: [4202, 16012], t: "Top of this rock in Oasis. Use jump crystal hidden in grass behind the rock to get up there."},
-		{n: 98, c: [3918, 16134], t: "Top of this rock ledge, jump to get there."}
+		{n: 98, c: [3918, 16134], t: "Top of this rock ledge, jump to get there."},
+		{n: 99, c: [4054, 16416], t: "In pile of rocks by cliff wall."},
+		{n: 100, c: [4202, 16803], t: "Top of wall ledges."},
+		{n: 101, c: [4295, 16429], t: "Corner of rock slabs and upper cliff."},
+		{n: 102, c: [4329, 16619], t: "In pile of rocks by bamboo."}
+		]
+	},
+	Collectible2: 
+	{
+		name: "Coin Collector: Prospect Valley",
+		color: "yellow",
+		wiki: "http://wiki.guildwars2.com/wiki/Lost_coin",
+		credit: "http://dulfy.net/2014/07/01/gw2-coin-collector-prospect-valley-achievement-guide/",
+		needles: [
+		{n: 1, c: [5525, 16723]},
+		{n: 2, c: [5413, 16656]},
+		{n: 3, c: [5415, 16783]},
+		{n: 4, c: [5286, 16560]},
+		{n: 5, c: [5218, 16667]},
+		{n: 6, c: [5249, 16549]},
+		{n: 7, c: [5240, 16427]},
+		{n: 8, c: [5109, 16734]},
+		{n: 9, c: [5139, 16775]},
+		{n: 10, c: [5153, 16703]},
+		{n: 11, c: [4970, 16655]},
+		{n: 12, c: [4925, 16726]},
+		{n: 13, c: [4916, 16697]},
+		{n: 14, c: [4888, 16545]},
+		{n: 15, c: [5096, 16487]},
+		{n: 16, c: [5177, 16275]},
+		{n: 17, c: [5282, 16174]},
+		{n: 18, c: [5412, 16187]},
+		{n: 19, c: [5346, 16214]},
+		{n: 20, c: [5555, 16077]},
+		{n: 21, c: [5520, 16281]},
+		{n: 22, c: [5668, 16191]},
+		{n: 23, c: [5528, 16455]},
+		{n: 24, c: [5393, 16558]},
+		{n: 25, c: [5473, 16462]},
+		{n: 26, c: [5548, 16538]},
+		{n: 27, c: [5557, 16434]},
+		{n: 28, c: [5560, 16511]},
+		{n: 29, c: [5382, 16406]},
+		{n: 30, c: [5367, 16565]}
+		]
+	},
+	Collectible3: 
+	{
+		name: "Coin Collector: Uplands",
+		color: "orange",
+		wiki: "http://wiki.guildwars2.com/wiki/Lost_coin",
+		credit: "http://www.guildnews.de/guides/die-verschlingung-der-grosse-guide/730/3/die-muenzen-aus-dem-hochland/",
+		needles: [
+		{n: 1, c: [5223, 16175]},
+		{n: 2, c: [5034, 16359]},
+		{n: 3, c: [4917, 16389]},
+		{n: 4, c: [4789, 16355]},
+		{n: 5, c: [4759, 16182]},
+		{n: 6, c: [5119, 16201]},
+		{n: 7, c: [5164, 16073]},
+		{n: 8, c: [4874, 16002]},
+		{n: 9, c: [4924, 15825]},
+		{n: 10, c: [4940, 15784]},
+		{n: 11, c: [4789, 15800]},
+		{n: 12, c: [4722, 15780]},
+		{n: 13, c: [4622, 15948]},
+		{n: 14, c: [4562, 15798]},
+		{n: 15, c: [4384, 15773]},
+		{n: 16, c: [4026, 15878]},
+		{n: 17, c: [3950, 15886]},
+		{n: 18, c: [3943, 16136]},
+		{n: 19, c: [4105, 16246]},
+		{n: 20, c: [4217, 16113]},
+		{n: 21, c: [4169, 16253]},
+		{n: 22, c: [4407, 16166]},
+		{n: 23, c: [4660, 16140]},
+		{n: 24, c: [4432, 16350]},
+		{n: 25, c: [4497, 16423]},
+		{n: 26, c: [4546, 16383]},
+		{n: 27, c: [4664, 16375]},
+		{n: 28, c: [4508, 16747]},
+		{n: 29, c: [4566, 16733]},
+		{n: 30, c: [4464, 16790]}
+		]
+	},
+	Collectible4: 
+	{
+		name: "Coin Collector: Challenger Cliffs",
+		color: "tomato",
+		wiki: "http://wiki.guildwars2.com/wiki/Lost_coin",
+		credit: "http://www.mattsta.ninja/dry-top/",
+		needles: [
+		{n: 1, c: [4384, 16528]},
+		{n: 2, c: [4235, 16167]},
+		{n: 3, c: [3986, 16123]},
+		{n: 4, c: [4361, 16822]},
+		{n: 5, c: [4375, 16756]},
+		{n: 6, c: [3983, 16835]},
+		{n: 7, c: [4036, 16781]},
+		{n: 8, c: [3911, 16805]},
+		{n: 9, c: [4102, 16534]},
+		{n: 10, c: [4256, 16487]},
+		{n: 11, c: [4070, 16480]},
+		{n: 12, c: [3908, 16594]}
 		]
 	}
 };
@@ -514,57 +541,57 @@ var GW2T_COLLECTIBLE_DATA = {
 	<div>
 	<h2>Kryta</h2>
 	<ul class="mapZones">
-	<li data-coord="[11648, 12864]">Queensdale</li>
-	<li data-coord="[11200, 10752]">Divinity's Reach</li>
-	<li data-coord="[11392, 15104]">Kessex Hills</li>
-	<li data-coord="[15552, 13312]">Gendarran Fields</li>
-	<li data-coord="[15040, 10880]">Harathi Hinterlands</li>
-	<li data-coord="[16448, 15104]">Lion's Arch</li>
-	<li data-coord="[16448, 17472]">Bloodtide Coast</li>
-	<li data-coord="[12864, 19840]">Southsun Cove</li>
+	<li data-zone="queensdale"></li>
+	<li data-zone="divinity"></li>
+	<li data-zone="kessex"></li>
+	<li data-zone="gendarran"></li>
+	<li data-zone="harathi"></li>
+	<li data-zone="lion"></li>
+	<li data-zone="bloodtide"></li>
+	<li data-zone="southsun"></li>
 	</ul>
 	<br />
 	<h2>Maguuma</h2>
 	<ul class="mapZones">
-	<li data-coord="[4864, 15872]">Dry Top</li>
-	<li data-coord="[8256, 18816]">Metrica Province</li>
-	<li data-coord="[5888, 20928]">Rata Sum</li>
-	<li data-coord="[10304, 18112]">Caledon Forest</li>
-	<li data-coord="[10432, 21120]">The Grove</li>
-	<li data-coord="[7616, 15808]">Brisban Wildlands</li>
-	<li data-coord="[16512, 20736]">Sparkfly Fen</li>
-	<li data-coord="[19712, 22592]">Mount Maelstrom</li>
+	<li data-zone="dry"></li>
+	<li data-zone="metrica"></li>
+	<li data-zone="rata"></li>
+	<li data-zone="caledon"></li>
+	<li data-zone="grove"></li>
+	<li data-zone="brisban"></li>
+	<li data-zone="sparkfly"></li>
+	<li data-zone="maelstrom"></li>
 	</ul>
 	<br />
 	<h2>Orr</h2>
 	<ul class="mapZones">
-	<li data-coord="[16128, 23808]">Straits of Devastation</li>
-	<li data-coord="[12416, 24192]">Malchor's Leap</li>
-	<li data-coord="[11136, 27264]">Cursed Shore</li>
+	<li data-zone="straits"></li>
+	<li data-zone="malchor"></li>
+	<li data-zone="cursed"></li>
 	</ul>
 	</div>
 
 	<div>
 	<h2>Shiverspeaks</h2>
 	<ul class="mapZones">
-	<li data-coord="[22656, 13568]">Wayfarer Foothills</li>
-	<li data-coord="[20608, 14144]">Hoelbrak</li>
-	<li data-coord="[19712, 12288]">Snowden Drifts</li>
-	<li data-coord="[18560, 15744]">Lornar's Pass</li>
-	<li data-coord="[20608, 16576]">Dredgehaunt Cliffs</li>
-	<li data-coord="[20096, 19776]">Timberline Falls</li>
-	<li data-coord="[22272, 9728]">Frostgorge Sound</li>
+	<li data-zone="wayfarer"></li>
+	<li data-zone="hoelbrak"></li>
+	<li data-zone="snowden"></li>
+	<li data-zone="lornar"></li>
+	<li data-zone="dredgehaunt"></li>
+	<li data-zone="timberline"></li>
+	<li data-zone="frostgorge"></li>
 	</ul>
 	<br />
 	<h2>Ascalon</h2>
 	<ul class="mapZones">
-	<li data-coord="[27136, 14592]">Plains of Ashford</li>
-	<li data-coord="[24320, 14592]">Black Citadel</li>
-	<li data-coord="[25344, 12416]">Diessa Plateau</li>
-	<li data-coord="[30208, 17792]">Fields of Ruin</li>
-	<li data-coord="[28160, 11520]">Iron Marches</li>
-	<li data-coord="[30208, 14208]">Blazeridge Steppes</li>
-	<li data-coord="[25472, 9856]">Fireheart Rise</li>
+	<li data-zone="ashford"></li>
+	<li data-zone="citadel"></li>
+	<li data-zone="diessa"></li>
+	<li data-zone="fields"></li>
+	<li data-zone="marches"></li>
+	<li data-zone="blazeridge"></li>
+	<li data-zone="fireheart"></li>
 	</ul>
 	</div>
 </div>
