Moved map options to compass popup

--- a/mapsrc.html
+++ b/mapsrc.html
@@ -536,7 +536,7 @@ var GW2T_COLLECTIBLE_DATA = {
 	>Map Zones</var>
 </header>
 <section>
-<samp class="jsHelpTooltip" title="To display map completion icons such as POIs, Vistas, Skill Challenges, and Hearts, go to the Options page and under Map, tick the related checkbox."></samp>
+<samp class="jsHelpTooltip" title="To display map completion icons such as POIs, Vistas, Skill Challenges, and Hearts, hover over the compass button on the map."></samp>
 <div class="mapZoneList mapLinks">
 	<div>
 	<h2>Kryta</h2>
@@ -748,7 +748,7 @@ You may need to complete the heart before you can purchase.
 	<div id="mapResource_Wood"></div>
 </div>
 <div class="mapLegendLine" style="border-bottom: 2px solid lime"></div> <strong>Exact</strong> location of that node<br />
-<div class="mapLegendLine" style="border-bottom: 2px dotted lime"></div> <strong>Approximate</strong> vicinity of that node<br />
+<div class="mapLegendLine" style="border-bottom: 2px dotted lime"></div> <strong>Possible</strong> vicinity of that node<br />
 <div class="mapLegendLine" style="border-bottom: 2px dashed lime"></div> <strong>Map</strong> has that resource (not a node)<br />
 <samp class="jsHelpCollapsible"></samp>
 <div>
