--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
 	<div id="jsConsole"></div>
 	<div id="jsConsoleButtons">
-		<a title="<dfn>Close Console<dfn>" id="jsConsoleButtonClose">[x]</a><a title="<dfn>Select Console<dfn>" id="jsConsoleButtonSelect">[s]</a>
+		<img title="<dfn>Close Console<dfn>" id="jsConsoleButtonClose" src="img/ui/console_close.png" alt="Close Console" /><img title="<dfn>Select Console<dfn>" id="jsConsoleButtonSelect" src="img/ui/console_select.png" alt="Select Console" />
 	</div>
 	<div id="paneWarning">
 		If you can read this then <strong>maybe</strong>:<br />
@@ -63,7 +63,24 @@
 				<a class="jsTranslate linkExternal" title="<dfn>Go to Forum</dfn>" href="http://forum.renaka.com/forum/368355/">news</a><span> /</span>
 				<u><a class="jsTranslate" title="<dfn>Switch to Simple Clock Mode</dfn>" href="./?mode=Simple">simple mode</a></u><span> /</span>
 				<u><a class="jsTranslate" title="<dfn>Dry Top Buried Locked Chests</dfn>" href="./?page=Chests">chests</a></u>
-				<img title="<dfn>Toggle Right Panel</dfn>" id="mapCompassButton" src="img/map/compass.png" alt="compass" />
+				<div id="mapOptions">
+					<img title="<dfn>Click for Full Map</dfn>" id="mapCompassButton" src="img/map/compass.png" alt="compass" />
+					<div id="mapOptionsPopup" class="cntComposition">
+						<label title="Show/Hide all icons listed below. Will increase initial site load time if enabled."><input id="opt_bol_showWorldCompletion" type="checkbox" /> Display world icons</label>
+						<div id="mapOptionsDisplay">
+							<label><img src="img/map/scope.png" alt="" /><input id="opt_bol_displaySectors" type="checkbox" /> Sector Names</label>
+							<label><img src="img/map/waypoint.png" alt="" /><input id="opt_bol_displayWaypoints" type="checkbox" /> Waypoints</label>
+							<label><img src="img/map/landmark.png" alt="" /><input id="opt_bol_displayPOIs" type="checkbox" /> POIs</label>
+							<label><img src="img/map/vista.png" alt="" /><input id="opt_bol_displayVistas" type="checkbox" /> Vistas</label>
+							<label><img src="img/map/skill.png" alt="" /><input id="opt_bol_displaySkills" type="checkbox" /> Skill Challenges</label>
+							<label><img src="img/map/heart.png" alt="" /><input id="opt_bol_displayHearts" type="checkbox" /> Renown Hearts</label>
+						</div>
+						<div id="mapOptionsOther">
+							<label title="Automatically scroll the map to the next predicted event. You'll need to be on the chains page."><input id="opt_bol_tourPrediction" type="checkbox" /> Tour predicted events</label>
+							<label title="Show/Hide the colored lines of the event paths."><input id="opt_bol_showChainPaths" type="checkbox" /> Show chain paths and event icons</label>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div id="itemMapLinksSouth" class="itemMapLinks">
 				<a class="linkExternal" title="<dfn>Download the app to run GW2Timer inside Guild Wars 2!</dfn>" href="http://forum.renaka.com/topic/5546166/">
@@ -293,19 +310,8 @@
 					</div>
 					<br />
 					<h2>Map</h2>
-					<label style="display:inline-block" title="Show/Hide all the map icons as you would see from the in-game world map. Will increase initial site load time if enabled."><input id="opt_bol_showMappingIcons" type="checkbox" /> Display map completion icons</label>
-					<samp class="jsHelpCollapsible"></samp>
-					<div class="cssIndent">
-						<label><input id="opt_bol_displaySectors" type="checkbox" /> Sector Names</label>
-						<label><input id="opt_bol_displayWaypoints" type="checkbox" /> Waypoints</label>
-						<label><input id="opt_bol_displayPOIs" type="checkbox" /> POIs</label>
-						<label><input id="opt_bol_displayVistas" type="checkbox" /> Vistas</label>
-						<label><input id="opt_bol_displaySkills" type="checkbox" /> Skill Challenges</label>
-						<label><input id="opt_bol_displayHearts" type="checkbox" /> Renown Hearts</label>
-					</div>
-					<label title="Automatically scroll the map to the next predicted event. You'll need to be on the chains page."><input id="opt_bol_tourPrediction" type="checkbox" /> Tour predicted events</label>
-					<label title="Show/Hide the colored lines of the event paths."><input id="opt_bol_showChainPaths" type="checkbox" /> Show chain paths and event icons</label>
 					<label title="Show/Hide the map area on the left."><input id="opt_bol_showMap" type="checkbox" /> Show the map</label>
+					<span>For map options, hover over the compass button <img class="cntIconExample" src="img/map/compass.png" alt="Icon" /> on the top right corner of the map pane.</span><br />
 					<br />
 					<h2>Alarm</h2>
 					<span>Voice announcement requires Chrome, Firefox, or IE9+. Multilingualism is only available for Chrome. Click the speaker icon on the chains page to toggle sound.</span>
