Few more chests

--- a/mapsrc.html
+++ b/mapsrc.html
@@ -86,7 +86,8 @@ var GW2T_RESOURCE_DATA = {
 	Orichalcum: {
 		approx: true,
 		nodes: [
-		[3916, 16397], // dry
+		[3910, 16726], // dry
+		[3916, 16397],
 		[4008, 16245],
 		[5023, 16529],
 		[5170, 16294],
@@ -148,7 +149,8 @@ var GW2T_RESOURCE_DATA = {
 	Ancient: {
 		approx: true,
 		nodes: [
-		[5063, 16666], // dry
+		[4551, 16215], // dry
+		[5063, 16666],
 		[12214, 20258], // southsun
 		[12906, 19772],
 		[13161, 19435],
@@ -409,10 +411,13 @@ var GW2T_COLLECTIBLE_DATA = {
 		{n: 96, c: [4374, 15764], t: "Up near skill point."},
 		{n: 97, c: [4202, 16012], t: "Top of this rock in Oasis. Use jump crystal hidden in grass behind the rock to get up there."},
 		{n: 98, c: [3918, 16134], t: "Top of this rock ledge, jump to get there."},
-		{n: 99, c: [4054, 16416], t: "In pile of rocks by cliff wall."},
-		{n: 100, c: [4202, 16803], t: "Top of wall ledges."},
-		{n: 101, c: [4295, 16429], t: "Corner of rock slabs and upper cliff."},
-		{n: 102, c: [4329, 16619], t: "In pile of rocks by bamboo."}
+		
+		{n: 99, c: [3944, 16756], t: "Under cave tree near Inquest tents."},
+		{n: 100, c: [4054, 16416], t: "In pile of rocks by cliff wall."},
+		{n: 101, c: [4112, 16726], t: "On layered ledges same level as south Vista."},
+		{n: 102, c: [4202, 16803], t: "Top of wall ledges."},
+		{n: 103, c: [4295, 16429], t: "Corner of rock slabs and upper cliff."},
+		{n: 104, c: [4329, 16619], t: "In pile of rocks by bamboo."}
 		]
 	},
 	Collectible2: 
